--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 
     <!-- First Portfolio -->
     <div class="project-card">
-      <a href="https://github.com/your-username/first-portfolio" target="_blank">
+      <a href="https://rayan-younes.github.io/my-portfolio/" target="_blank">
         <img src="images/ben-kolde-bs2Ba7t69mM-unsplash.jpg" alt="First Portfolio">
         <h3>First Portfolio</h3>
         </a>
